testdata/golden/sema/invalid/module_import_subpath/scripts/_foo.sg
pragma module;

pub fn foo() -> int {
    return 1;
}
